Non-unified build fixes late April 2020 edition https://bugs.webkit.org/show_bug.cgi?id=211099

Unreviewed build fix.

Source/WebCore:

No new tests needed.


* Modules/cache/DOMCacheStorage.cpp: Sprinkle DOMCacheEngine:: namespace prefixes as needed.
(WebCore::DOMCacheStorage::findCacheOrCreate):
(WebCore::DOMCacheStorage::retrieveCaches):
(WebCore::DOMCacheStorage::doOpen):
(WebCore::DOMCacheStorage::doRemove):
* bindings/js/JSExecStateInstrumentation.h: Ditto for JSC:: namespace prefixes.
(WebCore::JSExecState::instrumentFunction):
* dom/ScriptedAnimationController.h: Add missing ReducedResolutionSeconds.h header.
* editing/TextCheckingHelper.h: Add missing forward declaration for Position.
* html/URLSearchParams.h: Add missing ExceptionOr.h header.

Source/WebKit:


* NetworkProcess/NetworkLoad.cpp: Add mising WebCoreArgumentCoders.h header.
* WebProcess/Automation/WebAutomationDOMWindowObserver.cpp:
(WebKit::WebAutomationDOMWindowObserver::WebAutomationDOMWindowObserver): Add namespace to
WebCore::DOMWindow usage.


Canonical link: https://commits.webkit.org/224013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260818 268f45cc-cd09-0410-ab3c-d52691b4dbfc