Source/WebCore/bindings/js/JSExecStateInstrumentation.h
@@ -32,7 +32,7 @@
 
 namespace WebCore {
 
-inline void JSExecState::instrumentFunction(ScriptExecutionContext* context, const CallData& callData)
+inline void JSExecState::instrumentFunction(ScriptExecutionContext* context, const JSC::CallData& callData)
 {
     if (!InspectorInstrumentation::timelineAgentTracking(context))
         return;
@@ -40,7 +40,7 @@ inline void JSExecState::instrumentFunction(ScriptExecutionContext* context, con
     String resourceName;
     int lineNumber = 1;
     int columnNumber = 1;
-    if (callData.type == CallData::Type::JS) {
+    if (callData.type == JSC::CallData::Type::JS) {
         resourceName = callData.js.functionExecutable->sourceURL();
         lineNumber = callData.js.functionExecutable->firstLine();
         columnNumber = callData.js.functionExecutable->startColumn();
